JumpScript/tests/baselines/reference/typeofUnknownSymbol.errors.txt
tests/cases/compiler/typeofUnknownSymbol.jump(2,16): error TS2304: Cannot find name 'whatsthis'.


==== tests/cases/compiler/typeofUnknownSymbol.jump (1 errors) ====
    // previously gave no error here
    var x = typeof whatsthis
                   ~~~~~~~~~
!!! error TS2304: Cannot find name 'whatsthis'.
    